--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,13 @@
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*</include>
+                </includes>
             </resource>
         </resources>
     </build>
+
 
     <dependencies>
         <dependency>
